[#499] Expose documents
opentrials/opentrials#499
