# api/controllers/documents.js
@@ -1,0 +1,51 @@
+'use strict';
+
+const Document = require('../models/document');
+
+function getDocument(req, res) {
+  const id = req.swagger.params.id.value;
+
+  return new Document({ id: id }).fetch({
+      withRelated: Document.relatedModels,
+    })
+    .then((document) => {
+      if (document) {
+        res.json(document);
+      } else {
+        res.status(404);
+        res.finish();
+      }
+    })
+    .catch((err) => {
+      res.finish();
+      throw err;
+    });
+}
+
+function listDocuments(req, res) {
+  const params = req.swagger.params;
+  const page = params.page.value;
+  const perPage = params.per_page.value;
+
+  return Document.fetchPage({
+      page: page,
+      pageSize: perPage,
+      withRelated: Document.relatedModels,
+    })
+    .then((documents) => {
+      let response = {
+        total_count: documents.pagination.rowCount,
+        items: documents.models,
+      }
+      res.json(response);
+    })
+    .catch((err) => {
+      res.finish();
+      throw err;
+    });
+}
+
+module.exports = {
+  getDocument,
+  listDocuments,
+}
